gestion de tokens en la documentacion de swagger
